Adding Header and Menu to Home page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1 class="header">Let's Cook School</h1>
         <nav>
             <ul class="menu">
-                <li class="menu-li">Home</li>
-                <li class="menu-li">Courses</li>
-                <li class="menu-li">Sign Up</li>
+                <li class="menu-li"><a href="index.html">Home</a></li>
+                <li class="menu-li"><a href="courses.html">Courses</a></li>
+                <li class="menu-li"><a href="sign-up.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
