--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <script src="https://kit.fontawesome.com/5d852ae91a.js" crossorigin="anonymous"></script>
+
     <title>Let's Cook School</title>
 </head>
 <body>
@@ -21,19 +24,21 @@
         <section>
             <h2>About us</h2>
             <p>Our school is situated in Northside Dublin. Our professional, state-of-the-art studio is modern, spacious, and full of light which combines to create a delightful environment in which to work. </p>
-        </section>
-        <section>
-            <h3>Location</h3>
-            <h4>Opening Times:</h4>
+            <h3>Opening Times:</h3>
             <p>MON - FRI</p>
             <P>09:00 AM to 22:00 PM</P>
-            <h4>Address:</h4>
+            <h3>Phone:</h3>
+            <p>T: (01) 123 0000</p>
+            <h3>Address:</h3>
             <p>Unit 7, Butterly business park, Kilemore road, Artane Dublin 5, Dublin 5</p>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2379.679043206789!2d-6.216147734007953!3d53.384791979531734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670fcbe094e663%3A0xee376ac7309c66dd!2sSchool%20of%20Cookery!5e0!3m2!1sen!2sie!4v1674050340389!5m2!1sen!2sie" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
     <footer>
-
+        <h4>Follow US</h4>
+        <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook"></i></a>
+        <a href="https://www.youtube.com/"><i class="fa-brands fa-youtube"></i></a>
     </footer>
 </body>
 </html>
