Adding courses menu options on HTML

--- a/courses.html
+++ b/courses.html
@@ -48,14 +48,43 @@
                 <ul class="list">
                     <li>Making Fresh Pasta Dough - demo on different shapes.</li>
                     <li>Ravioli with Taleggio - ricotta & parmesan.</li>
-                    <li>Multiseed Brown Yeast Bread.</li>
-                    <li>Cinnamon Pull Apart Bread.</li>
-                    <li>Challah Bread.</li>
+                    <li>Pappardelle - braised shanks & tenderstem w/ pappardelle.</li>
+                    <li>Pasta with Parma Ham & Tomatoes.</li>
                 </ul>
                 <p class="small">*Sample menu subject to change</p>
             </div>  
-            <div class="seafood"></div>  
-            <div class="dessert"></div>  
+            <div class="seafood">
+                <h2>Seafood Masterclass</h2>
+                <p>PRICE €250.00</p>
+                <p>DAY COURSE 9:30 AM - 3:00 PM</p>
+                <p>A much-anticipated extension of our popular evening course, if you are a lover of seafood, this course is your perfect match.</p>
+                <p>What will you learn?</p>
+                <ul class="list">
+                    <li>General Points about Handling, Storing & Working with Fish.</li>
+                    <li>Fish Stock.</li>
+                    <li>Pan-Fried Mackerel - fennel, celeriac & preserved lemon.</li>
+                    <li>Pan-Fried Sea Bass with Green Spice Paste - oven roasted tomatoes.</li>
+                    <li>Fish in Papillote with Basil.</li>
+                    <li>Seared Scallops with Potato Rosti & Pea Purée.</li>
+                    <li>Cod with Cauliflower Purée, Griddled Leeks - pickled cauliflower & fish velouté.</li>
+                </ul>
+                <p class="small">*Sample menu subject to change</p>
+            </div>  
+            <div class="dessert">
+                <h2>Chocolate Desserts Masterclass</h2>
+                <p>PRICE €120.00</p>
+                <p>EVENING COURSE 07:00 PM - 09:30 PM</p>
+                <p>When the chocolate craving hits here, we don’t hold back! Move over vanilla, this night’s reserved for your delectable alter ego.</p>
+                <p>What will you learn?</p>
+                <ul class="list">
+                    <li>Robert de Niro's Chocolate Hazelnut Cake, Chocolate Ganache.</li>
+                    <li>Decorating cakes with piped chocolate.</li>
+                    <li>Chocolate truffles.</li>
+                    <li>Chocolate Madeleines</li>
+                    <li>Hot chocolate mousse</li>
+                </ul>
+                <p class="small">*Sample menu subject to change</p>
+            </div>  
         </section>
     </main>
     <footer>
