--- a/sign-up.html
+++ b/sign-up.html
@@ -23,26 +23,28 @@
         </nav>
     </header>
     <main>
-        <section>
-            <div>
-                <h2>Fill this form and a salesperson will contact you to schedule your course and take the payment details.</h2>
-                <label for="fname">First Name:</label>
-                <input id="fname" type="text" name="fname"!required>
-                <label for="lname">Last Name:</label>
-                <input id="lname" type="text" name="lname"!required>
-                <label for="email">Email Address:</label>
-                <input id="email" type="email" name="email"!required>
-                <label for="phone">Phone Number:</label>
-                <input id="phone" type="number" name="phone"!required>
-                <label for="list">Course of Interest:</label>
-                <select name="list" id="list"!required>
-                    <option value="bread">Bread Masterclass</option>
-                    <option value="pasta">Pasta Masterclass</option>
-                    <option value="seafood">Seafood Masterclass</option>
-                    <option value="dessert">Chocolate Desserts Masterclass</option>
-                <input type="submit" name="submit" value="Let’s cook!)">
-                </select>
-            </div>
+        <section class="main-sign-up"> 
+            <div class="background-signup">
+                <form action="https://formdump.codeinstitute.net/" method="post" class="sign-up-box">
+                    <h2>Fill this form and a salesperson will contact you to schedule your course and take the payment details.</h2>
+                    <label for="fname">First Name:</label>
+                    <input class="input" id="fname" type="text" name="fname"required>
+                    <label for="lname">Last Name:</label>
+                    <input class="input" id="lname" type="text" name="lname"required>
+                    <label for="email">Email Address:</label>
+                    <input class="input" id="email" type="email" name="email"required>
+                    <label for="phone">Phone Number:</label>
+                    <input class="input" id="phone" type="number" name="phone"required>
+                    <label for="list">Course of Interest:</label>
+                    <select class="radio" name="list" id="list">
+                        <option value="bread">Bread Masterclass</option>
+                        <option value="pasta">Pasta Masterclass</option>
+                        <option value="seafood">Seafood Masterclass</option>
+                        <option value="dessert">Chocolate Desserts Masterclass</option>
+                    <input type="submit" class="submit" name="submit" value="Let's cook!">
+                    </select>
+                </form>
+            </div>    
         </section>
     </main>
     <footer>
