--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Let's Cook School - Home Page</title>
 </head>
-<body>
+<body class="main">
     <header>
         <h1 class="header"><a href="index.html">Let's Cook School</a></h1>
         <nav>
@@ -24,27 +24,28 @@
     </header>
     <main>
         <section>
-            <div class="main">
+            <div class="main2">
                 <div class="about">
                     <h2>About us</h2>
                     <p>Our school is situated in Northside Dublin. Our professional, state-of-the-art studio is modern, spacious, and full of light which combines to create a delightful environment in which to work. </p>
                 </div>
-                <div class="opening-time">
-                    <h3>Opening Times:</h3>
-                    <p>Monday to Friday</p>
-                    <P>09:00 AM to 22:00 PM</P>
-                </div>
-                <div class="phone">
-                    <h3>Contact:</h3>
-                    <p>Phone: (01) 123 0000</p>
-                    <p>Email: info@letscookschool.ie</p>
-                </div>
+                <div class="wrap">
+                    <div class="opening-time">
+                        <h3>Opening Times:</h3>
+                        <p>Monday to Friday</p>
+                        <P>09:00 AM to 22:00 PM</P>
+                    </div>
+                    <div class="phone">
+                        <h3>Contact:</h3>
+                        <p>Phone: (01) 123 0000</p>
+                        <p>Email: info@letscookschool.ie</p>
+                    </div>
+                </div> 
                 <div class="address">
                     <h3>Address:</h3>
                     <p>Unit 7, Butterly business park, Kilemore road, Artane Dublin 5, Dublin 5</p>
                 </div>
                 <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2379.679043206789!2d-6.216147734007953!3d53.384791979531734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670fcbe094e663%3A0xee376ac7309c66dd!2sSchool%20of%20Cookery!5e0!3m2!1sen!2sie!4v1674050340389!5m2!1sen!2sie" width="750" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <!--<img class="main-photo" src="/assets/images/main1.jpeg" alt="pinch of salt">-->
             </div>
         </section>
     </main>
