Changing home page background

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Let's Cook School - Home Page</title>
 </head>
-<body class="main">
+<body>
     <header>
         <h1 class="header"><a href="index.html">Let's Cook School</a></h1>
         <nav>
@@ -22,7 +22,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="home-background">
         <section>
             <div class="main2">
                 <div class="about">
