--- a/sign-up.html
+++ b/sign-up.html
@@ -22,9 +22,9 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <section class="main-sign-up"> 
-            <div class="background-signup">
+    <main class="background-signup">
+        <section> 
+            <div>
                 <form action="https://formdump.codeinstitute.net/" method="post" class="sign-up-box">
                     <h2>Fill this form and a salesperson will contact you to schedule your course and take the payment details.</h2>
                     <label for="fname">First Name:</label>
