Updating flex box

--- a/courses.html
+++ b/courses.html
@@ -39,6 +39,7 @@
                 </ul>
                 <p class="small">*Sample menu subject to change</p>
             </div>
+            <div class="bread-photo"></div>
             <div class="pasta">
                 <h2>Pasta Masterclass</h2>
                 <p>PRICE €90.00</p>
