--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                     <h2>Address:</h2>
                     <p>Unit 7, Butterly business park, Kilemore road, Artane Dublin 5, Dublin 5</p>
                 </div>
-                <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2379.679043206789!2d-6.216147734007953!3d53.384791979531734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670fcbe094e663%3A0xee376ac7309c66dd!2sSchool%20of%20Cookery!5e0!3m2!1sen!2sie!4v1674050340389!5m2!1sen!2sie" width="750" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2379.679043206789!2d-6.216147734007953!3d53.384791979531734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670fcbe094e663%3A0xee376ac7309c66dd!2sSchool%20of%20Cookery!5e0!3m2!1sen!2sie!4v1674050340389!5m2!1sen!2sie" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </div>
         </section>
     </main>
