Styling courses page

--- a/courses.html
+++ b/courses.html
@@ -53,7 +53,8 @@
                     <li>Pasta with Parma Ham & Tomatoes.</li>
                 </ul>
                 <p class="small">*Sample menu subject to change</p>
-            </div>  
+            </div>
+            <div class="pasta-photo"></div>  
             <div class="seafood">
                 <h2>Seafood Masterclass</h2>
                 <p>PRICE €250.00</p>
@@ -70,7 +71,8 @@
                     <li>Cod with Cauliflower Purée, Griddled Leeks - pickled cauliflower & fish velouté.</li>
                 </ul>
                 <p class="small">*Sample menu subject to change</p>
-            </div>  
+            </div>
+            <div class="seafood-photo"></div>
             <div class="dessert">
                 <h2>Chocolate Desserts Masterclass</h2>
                 <p>PRICE €120.00</p>
@@ -85,7 +87,8 @@
                     <li>Hot chocolate mousse</li>
                 </ul>
                 <p class="small">*Sample menu subject to change</p>
-            </div>  
+            </div>
+            <div class="dessert-photo"></div>
         </section>
     </main>
     <footer>
