--- a/courses.html
+++ b/courses.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="culinary course in Dublin">
 
     <script src="https://kit.fontawesome.com/5d852ae91a.js" crossorigin="anonymous"></script>
 
@@ -93,9 +94,9 @@
     </main>
     <footer>
         <div class="social-media">
-            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
-            <a href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+            <a aria-label="Instagram" href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+            <a aria-label="Facebook" href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-square-facebook"></i></a>
+            <a aria-label="Youtube" href="https://www.youtube.com/" target="_blank"><i class="fa-brands fa-youtube"></i></a>
         </div>
     </footer>
 </body>
