Addding comments to CSS and Adding thank you submit page

--- a/sign-up.html
+++ b/sign-up.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="culinary course in Dublin">
 
-    <script src="https://kit.fontawesome.com/5d852ae91a.js" crossorigin="anonymous"></script>
-
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Let's Cook School - Sign Up</title>
@@ -26,7 +24,7 @@
     <main class="background-signup">
         <section> 
             <div>
-                <form action="https://formdump.codeinstitute.net/" method="post" class="sign-up-box">
+                <form action="" method="post" class="sign-up-box">
                     <h2>Fill this form and a salesperson will contact you to schedule your course and take the payment details.</h2>
                     <label for="fname">First Name:</label>
                     <input class="input" id="fname" type="text" name="fname" required>
@@ -56,4 +54,5 @@
         </div>
     </footer>
 </body>
+<script src="https://kit.fontawesome.com/5d852ae91a.js" crossorigin="anonymous"></script>
 </html>
