--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="culinary course in Dublin">
 
-    <script src="https://kit.fontawesome.com/5d852ae91a.js" crossorigin="anonymous"></script>
-
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Let's Cook School - Home Page</title>
@@ -25,7 +23,7 @@
     </header>
     <main class="home-background">
         <section>
-            <div class="main2">
+            <div class="main">
                 <div class="about">
                     <h2>About us</h2>
                     <p>Our school is situated in Northside Dublin. Our professional, state-of-the-art studio is modern, spacious, and full of light which combines to create a delightful environment in which to work. </p>
@@ -60,4 +58,5 @@
         </div>
     </footer>
 </body>
+<script src="https://kit.fontawesome.com/5d852ae91a.js" crossorigin="anonymous"></script>
 </html>
