--- a/sign-up.html
+++ b/sign-up.html
@@ -24,7 +24,7 @@
     <main class="background-signup">
         <section> 
             <div>
-                <form action="https://adriele-lima.github.io/Portfolio-1/submit.html" method="post" class="sign-up-box">
+                <form action="../Portfolio-1/submit.html" method="post" class="sign-up-box">
                     <h2>Fill this form and a salesperson will contact you to schedule your course and take the payment details.</h2>
                     <label for="fname">First Name:</label>
                     <input class="input" id="fname" type="text" name="fname" required>
