--- a/sign-up.html
+++ b/sign-up.html
@@ -24,7 +24,7 @@
     <main class="background-signup">
         <section> 
             <div>
-                <form action="/submit.html" class="sign-up-box">
+                <form class="sign-up-box">
                     <h2>Fill this form and a salesperson will contact you to schedule your course and take the payment details.</h2>
                     <label for="fname">First Name:</label>
                     <input class="input" id="fname" type="text" name="fname" required>
@@ -41,7 +41,7 @@
                         <option value="seafood">Seafood Masterclass</option>
                         <option value="dessert">Chocolate Desserts Masterclass</option>
                     </select>
-                    <input type="submit" class="submit" name="submit" value="Let's cook!">
+                    <input href="/submit.html" type="submit" class="submit" name="submit" value="Let's cook!">
                 </form>
             </div>    
         </section>
